Day 53/ques/path-based/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: desktop-route
  namespace: apps
spec:
  parentRefs:
  - name: web-gateway
    namespace: ngf-gatewayapi-ns
    sectionName: http
  hostnames:
  - "desktop.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: desktop-svc
      port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iphone-route
  namespace: apps
spec:
  parentRefs:
  - name: web-gateway
    namespace: ngf-gatewayapi-ns
    sectionName: http
  hostnames:
  - "iphone.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: iphone-svc
      port: 80
---
